--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@metinseylan/nestjs-opentelemetry",
-  "version": "2.0.7",
+  "name": "@precise/nestjs-opentelemetry",
+  "version": "2.0.8",
   "description": "deeply integrated OpenTelemetry module for Nestjs",
   "author": "metinsyln@gmail.com",
   "license": "MIT",
@@ -41,44 +41,46 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@nestjs/event-emitter": "^1.0.0",
-    "@nestjs/microservices": "^8.1.1",
+    "@nestjs/event-emitter": "^1.3.0",
+    "@nestjs/microservices": "^8.2.6",
     "@nestjs/schedule": "^1.0.2",
-    "@opentelemetry/api": "^1.0.4",
+    "@opentelemetry/api": "^1.1.0",
+    "@opentelemetry/api-metrics": "^0.31.0",
     "@opentelemetry/context-async-hooks": "^1.0.1",
-    "@opentelemetry/core": "^1.0.1",
-    "@opentelemetry/host-metrics": "^0.27.1",
-    "@opentelemetry/instrumentation-http": "^0.27.0",
-    "@opentelemetry/propagator-b3": "^1.0.1",
-    "@opentelemetry/propagator-jaeger": "^1.0.1",
-    "@opentelemetry/resource-detector-aws": "^1.0.3",
-    "@opentelemetry/resources": "^1.0.1",
-    "@opentelemetry/sdk-node": "^0.27.0",
-    "@opentelemetry/sdk-trace-base": "^1.0.1",
+    "@opentelemetry/core": "^1.5.0",
+    "@opentelemetry/host-metrics": "^0.29.0",
+    "@opentelemetry/instrumentation-http": "^0.31.0",
+    "@opentelemetry/propagator-b3": "^1.5.0",
+    "@opentelemetry/propagator-jaeger": "^1.5.0",
+    "@opentelemetry/resource-detector-aws": "^1.1.1",
+    "@opentelemetry/resources": "^1.5.0",
+    "@opentelemetry/sdk-node": "^0.31.0",
+    "@opentelemetry/sdk-metrics-base": "^0.31.0",
+    "@opentelemetry/sdk-trace-base": "^1.5.0",
     "rimraf": "^3.0.2",
-    "rxjs": "^7.1.0"
+    "rxjs": "^7.5.5"
   },
   "peerDependencies": {
-    "@nestjs/common": "^8.1.1",
-    "@nestjs/core": "^8.1.1",
-    "@nestjs/event-emitter": "^1.0.0",
-    "@nestjs/microservices": "^8.1.1",
+    "@nestjs/common": "^8.2.6",
+    "@nestjs/core": "^8.2.6",
+    "@nestjs/event-emitter": "^1.3.0",
+    "@nestjs/microservices": "^8.2.6",
     "@nestjs/schedule": "^1.0.2",
     "reflect-metadata": "^0.1.13"
   },
   "devDependencies": {
-    "@nestjs/cli": "^8.2.2",
-    "@nestjs/common": "^8.1.1",
-    "@nestjs/core": "^8.1.1",
-    "@nestjs/event-emitter": "^1.0.0",
-    "@nestjs/microservices": "^8.1.1",
+    "@nestjs/cli": "^8.2.5",
+    "@nestjs/common": "^8.2.6",
+    "@nestjs/core": "^8.2.6",
+    "@nestjs/event-emitter": "^1.3.0",
+    "@nestjs/microservices": "^8.2.6",
     "@nestjs/schedule": "^1.0.2",
     "@nestjs/schematics": "^8.0.3",
-    "@nestjs/testing": "^8.0.7",
+    "@nestjs/testing": "^8.2.6",
     "@types/cron": "^1.7.3",
     "@types/express": "^4.17.13",
     "@types/jest": "^27.0.2",
-    "@types/node": "^16.9.6",
+    "@types/node": "^18.7.3",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^4.31.2",
     "@typescript-eslint/parser": "^4.31.2",
@@ -86,6 +88,7 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "jest": "^27.2.2",
+    "jest-mock-extended": "2.0.4",
     "prettier": "^2.4.1",
     "reflect-metadata": "^0.1.13",
     "supertest": "^6.1.6",
