--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@precise/nestjs-opentelemetry",
-  "version": "2.0.14",
+  "version": "2.0.16",
   "description": "deeply integrated OpenTelemetry module for Nestjs",
   "author": "metinsyln@gmail.com",
   "license": "MIT",
@@ -42,8 +42,7 @@
   },
   "dependencies": {
     "@nestjs/event-emitter": "^1.3.0",
-    "@nestjs/microservices": "^8.2.6",
-    "@nestjs/schedule": "^1.0.2",
+    "@nestjs/schedule": "^2.2.0",
     "@opentelemetry/api": "^1.1.0",
     "@opentelemetry/api-metrics": "^0.31.0",
     "@opentelemetry/context-async-hooks": "^1.5.0",
@@ -66,21 +65,18 @@
     "@nestjs/event-emitter": "^1.3.0",
     "@nestjs/microservices": "^8.2.6 || ^9.0.0",
     "@nestjs/schedule": "^1.0.2 || ^2.0.0",
-    "reflect-metadata": "^0.1.13"
+    "reflect-metadata": "^0.1.13",
+    "@nestjs/testing": "^8.0.0 || ^9.0.0"
   },
   "devDependencies": {
-    "@nestjs/cli": "^8.2.5",
-    "@nestjs/common": "^8.2.6",
-    "@nestjs/core": "^8.2.6",
+    "@nestjs/cli": "^9.2.0",
     "@nestjs/event-emitter": "^1.3.0",
-    "@nestjs/microservices": "^8.2.6",
-    "@nestjs/schedule": "^1.0.2",
-    "@nestjs/schematics": "^8.0.3",
-    "@nestjs/testing": "^8.2.6",
+    "@nestjs/schematics": "^9.0.4",
+
     "@types/cron": "^1.7.3",
     "@types/express": "^4.17.13",
     "@types/jest": "^27.0.2",
-    "@types/node": "^18.7.3",
+    "@types/node": "^18.14.0",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^4.31.2",
     "@typescript-eslint/parser": "^4.31.2",
